# pessimal-pub

./: .coverage  .gitignore  LICENSE.md  NOTES.md  README.md  TODO.md  config.yaml  live_code.sh  pyproject.toml  run_tests.sh
data/: jobs.yaml  saved_setup.yml  setup.yaml  sprites.yaml  ui_theme.json
data/i18n/: ui.json
data/shaders/: config.yaml  default_f.glsl  default_v.glsl  instanced_textured_lit_v.glsl  test_f.glsl  test_v.glsl  textured_f.glsl  textured_lit_f.glsl  textured_lit_v.glsl  textured_v.glsl
pessimal/: camera.py  component.py  editor.py  entity.py  field.py  game.py  input_manager.py  main.py  sprite_manager.py  v2.py  v3.py  world.py
pessimal/components/: __init__.py  building.py  character.py  orbiter.py  player.py  road_network.py  simple_render.py  sprite.py  sprite_render.py  worker_components.py  world_resource.py
pessimal/engine/: __init__.py  config.py  i18n_support.py  imgui_support.py  instance.py  math_support.py  model.py  opengl_helper.py  shader.py  texture.py
tests/: fixtures.py  run.sh  run_gui.sh  test_camera.py  test_component.py  test_entity.py  test_fields.py  test_game.py  test_sprite_manager.py  test_v2.py  test_v3.py
tests/components/: fixtures.py  test_building.py  test_character.py  test_orbiter.py  test_player.py  test_road_network.py  test_simple_render.py  test_sprite_render.py  test_worker_components.py  test_world.py  test_world_resource.py
tests/engine/: test_config.py  test_engine.py  test_i18n.py  test_math_support.py
tests/test_data/: test_world.yaml  ui.json
